--- a/pom.xml
+++ b/pom.xml
@@ -54,4 +54,11 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+    </dependencies>
 </project>
