--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,13 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies><dependency>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+        <dependency>
         <groupId>com.opencsv</groupId>
         <artifactId>opencsv</artifactId>
         <version>5.7.0</version>
