--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,5 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
-        <dependency>
-        <groupId>com.opencsv</groupId>
-        <artifactId>opencsv</artifactId>
-        <version>5.7.0</version>
-    </dependency></dependencies>
+        </dependencies>
 </project>
